crates/oxc_css_parser/tests/error/scss/at-rule/forward/with-space-after-dollar.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `$var`, but found `<unknown>`
  ┌─ with-space-after-dollar.scss:1:24
  │
1 │ @forward "other" with ($ a: b);
  │                        ^
